// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders multi route 1`] = `
<DocumentFragment>
  <div
    class="RoutingDiagram__Wrapper-sc-o1ook0-0 fUoVYh css-vurnku"
  >
    <div
      class="sc-bdnxRM Row-sc-nrd8cx-0 RoutingDiagram__RouteContainerRow-sc-o1ook0-1 lmTMKd itvFNV iiQQUx"
    >
      CurrencyLogo currency=USDC
      <div
        class="sc-bdnxRM Row-sc-nrd8cx-0 RoutingDiagram__RouteRow-sc-o1ook0-2 lmTMKd itvFNV fzMiot"
      >
        <div
          class="RoutingDiagram__DottedLine-sc-o1ook0-4 kHIEgO"
        />
        <div
          class="Badge-sc-1mhw5si-0 RoutingDiagram__OpaqueBadge-sc-o1ook0-5 gayll cvyxdH"
        >
          <div
            class="theme__TextWrapper-sc-18nh1jk-0 cWOfab css-15li2d9"
            style="word-break: normal;"
          >
            7.5%
          </div>
        </div>
        <div
          class="sc-bdnxRM Row-sc-nrd8cx-0 Row__AutoRow-sc-nrd8cx-3 iqvZFe itvFNV kkMfuq"
          style="justify-content: space-evenly; z-index: 2;"
          width="100%"
        >
          <div
            class="Badge-sc-1mhw5si-0 RoutingDiagram__PoolBadge-sc-o1ook0-3 gayll bRJvWg"
          >
            <div
              class="css-1t7xebc"
            >
              DoubleCurrencyLogo currency0=DAI currency1=USDC
            </div>
            <div
              class="theme__TextWrapper-sc-18nh1jk-0 cWOfab css-15li2d9"
            >
              0.05%
            </div>
          </div>
        </div>
      </div>
      CurrencyLogo currency=DAI
    </div>
    <div
      class="sc-bdnxRM Row-sc-nrd8cx-0 RoutingDiagram__RouteContainerRow-sc-o1ook0-1 lmTMKd itvFNV iiQQUx"
    >
      CurrencyLogo currency=USDC
      <div
        class="sc-bdnxRM Row-sc-nrd8cx-0 RoutingDiagram__RouteRow-sc-o1ook0-2 lmTMKd itvFNV fzMiot"
      >
        <div
          class="RoutingDiagram__DottedLine-sc-o1ook0-4 kHIEgO"
        />
        <div
          class="Badge-sc-1mhw5si-0 RoutingDiagram__OpaqueBadge-sc-o1ook0-5 gayll cvyxdH"
        >
          <div
            class="theme__TextWrapper-sc-18nh1jk-0 cWOfab css-15li2d9"
            style="word-break: normal;"
          >
            2.5%
          </div>
        </div>
        <div
          class="sc-bdnxRM Row-sc-nrd8cx-0 Row__AutoRow-sc-nrd8cx-3 iqvZFe itvFNV kkMfuq"
          style="justify-content: space-evenly; z-index: 2;"
          width="100%"
        >
          <div
            class="Badge-sc-1mhw5si-0 RoutingDiagram__PoolBadge-sc-o1ook0-3 gayll bRJvWg"
          >
            <div
              class="css-1t7xebc"
            >
              DoubleCurrencyLogo currency0=MKR currency1=USDC
            </div>
            <div
              class="theme__TextWrapper-sc-18nh1jk-0 cWOfab css-15li2d9"
            >
              0.3%
            </div>
          </div>
          <div
            class="Badge-sc-1mhw5si-0 RoutingDiagram__PoolBadge-sc-o1ook0-3 gayll bRJvWg"
          >
            <div
              class="css-1t7xebc"
            >
              DoubleCurrencyLogo currency0=DAI currency1=MKR
            </div>
            <div
              class="theme__TextWrapper-sc-18nh1jk-0 cWOfab css-15li2d9"
            >
              1%
            </div>
          </div>
        </div>
      </div>
      CurrencyLogo currency=DAI
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders single route 1`] = `
<DocumentFragment>
  <div
    class="RoutingDiagram__Wrapper-sc-o1ook0-0 fUoVYh css-vurnku"
  >
    <div
      class="sc-bdnxRM Row-sc-nrd8cx-0 RoutingDiagram__RouteContainerRow-sc-o1ook0-1 lmTMKd itvFNV iiQQUx"
    >
      CurrencyLogo currency=USDC
      <div
        class="sc-bdnxRM Row-sc-nrd8cx-0 RoutingDiagram__RouteRow-sc-o1ook0-2 lmTMKd itvFNV fzMiot"
      >
        <div
          class="RoutingDiagram__DottedLine-sc-o1ook0-4 kHIEgO"
        />
        <div
          class="Badge-sc-1mhw5si-0 RoutingDiagram__OpaqueBadge-sc-o1ook0-5 gayll cvyxdH"
        >
          <div
            class="theme__TextWrapper-sc-18nh1jk-0 cWOfab css-15li2d9"
            style="word-break: normal;"
          >
            10%
          </div>
        </div>
        <div
          class="sc-bdnxRM Row-sc-nrd8cx-0 Row__AutoRow-sc-nrd8cx-3 iqvZFe itvFNV kkMfuq"
          style="justify-content: space-evenly; z-index: 2;"
          width="100%"
        >
          <div
            class="Badge-sc-1mhw5si-0 RoutingDiagram__PoolBadge-sc-o1ook0-3 gayll bRJvWg"
          >
            <div
              class="css-1t7xebc"
            >
              DoubleCurrencyLogo currency0=DAI currency1=USDC
            </div>
            <div
              class="theme__TextWrapper-sc-18nh1jk-0 cWOfab css-15li2d9"
            >
              0.05%
            </div>
          </div>
        </div>
      </div>
      CurrencyLogo currency=DAI
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders when no routes are provided 1`] = `
<DocumentFragment>
  <div
    class="RoutingDiagram__Wrapper-sc-o1ook0-0 fUoVYh css-vurnku"
  />
</DocumentFragment>
`;
